Fixed Dashboard issues and removed horizontal scroll from chat window

--- a/app/assets/stylesheets/pages/_messages.scss
+++ b/app/assets/stylesheets/pages/_messages.scss
@@ -11,6 +11,7 @@
 
 #messages-container {
   overflow: scroll;
+  overflow-x: hidden;
   height: 95%;
   padding: 10px;
 }
